RESOLVED FIXED279942
REGRESSION(282068@main): Scrollbars no longer match YouTube's dark theme
https://bugs.webkit.org/show_bug.cgi?id=279942
Summary REGRESSION(282068@main): Scrollbars no longer match YouTube's dark theme
Nikos Mouchtaris
Reported 2024-09-18 17:48:46 PDT
(Regression: `scrollbar-width`): youtube.com - system native scrollbar instead of previous visually appealing scrollbar
Attachments
Nikos Mouchtaris
Comment 1 2024-09-18 17:50:14 PDT
Nikos Mouchtaris
Comment 2 2024-09-18 17:53:22 PDT
EWS
Comment 3 2024-09-20 14:10:07 PDT
Committed 284010@main (7bfadd7e9dc6): <https://commits.webkit.org/284010@main> Reviewed commits have been landed. Closing PR #33869 and removing active labels.
EWS
Comment 4 2024-09-24 11:36:29 PDT
Committed 283286.119@safari-7620-branch (e07cc99fefe7): <https://commits.webkit.org/283286.119@safari-7620-branch> Reviewed commits have been landed. Closing PR #1891 and removing active labels.
Note You need to log in before you can comment on or make changes to this bug.