Cherry-pick 284010@main (7bfadd7e9dc6). https://bugs.webkit.org/show_bug.cgi?id=279942

REGRESSION(282068@main): Scrollbars no longer match YouTube's dark theme
    https://bugs.webkit.org/show_bug.cgi?id=279942
    <rdar://problem/135886305>

    Reviewed by Tim Nguyen.

    Add quirk to youtube to set color-scheme to dark if dark attribute is present on html element. This is due
    to scrollbar-width being turned on, which overrides the scrollbar pseudo elements being used by youtube,
    which exposes the native scrollbars not being set to dark mode.

    * Source/WebCore/page/Quirks.cpp:
    (WebCore::Quirks::needsYouTubeDarkModeQuirk const):
    * Source/WebCore/page/Quirks.h:
    * Source/WebCore/style/StyleAdjuster.cpp:
    (WebCore::Style::Adjuster::adjustForSiteSpecificQuirks const):

    Canonical link: https://commits.webkit.org/284010@main

Canonical link: https://commits.webkit.org/282416.133@webkitglib/2.46